# aoc2024

./: 01.cpp  CMakeLists.txt
01/: main.cpp
02/: main.cpp
03/: main.cpp
04/: main.cpp
05/: main.cpp  test_input
06/: main.cpp
07/: main.cpp
08/: main.cpp
